supermarket post route and handler added
